--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <properties>
     	<jdk.version>1.7</jdk.version>
-    	<my.version>1.1.Final</my.version>
+    	<my.version>1.2-SNAPSHOT</my.version>
 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	<project.build.locale>es_ES</project.build.locale>
 	<chronoslibs.version>1.0.Final</chronoslibs.version>
