--- a/bitcoincalculator-front/src/main/webapp/WEB-INF/web.xml
+++ b/bitcoincalculator-front/src/main/webapp/WEB-INF/web.xml
@@ -26,7 +26,7 @@
 	
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
-		<param-value>AppTest</param-value>
+		<param-value>bitcoincalculator</param-value>
 	</context-param>
 	
 	<context-param>
