--- a/bitcoincalculator-core/src/main/resources/application.properties
+++ b/bitcoincalculator-core/src/main/resources/application.properties
@@ -3,3 +3,5 @@ BitcoinCalculator.name=BitcoinCalculator
 BitcoinCalculator.title=Calculador de bitcoins v1.0
 BitcoinCalculator.api=https\://alloscomp.com/bitcoin/calculator/json
 BitcoinCalculator.exchangeSource=https\://www.bitstamp.net/
+
+infinispan.server=localhost
