Se corrigen bugs

--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle.properties
@@ -8,7 +8,7 @@ calculator.medidaHashVacia=Select a hash measure
 calculator.tasaHashVacia=Type a hash rate
 calculator.tipoCambioVacio=Select a exchange rate
 calculator.tasaSeleccionada=Selected rate: {0} hash/second
-calculator.tasaCambioSeleccionado=Exchange rate: {0}
+calculator.tasaCambioSeleccionado=Exchange rate: {0} {1}
 calculator.exchangeRateSource=Exchange rate source
 calculator.bcPerBlock=Bitcoins per block
 calculator.siguienteDificultad=Next difficulty
