--- a/bitcoincalculator-front/src/main/webapp/WEB-INF/web.xml
+++ b/bitcoincalculator-front/src/main/webapp/WEB-INF/web.xml
@@ -63,7 +63,7 @@
 	</servlet-mapping>
 	
 	<welcome-file-list>
-		<welcome-file>faces/index.xhtml</welcome-file>
+		<welcome-file>faces/pages/index.xhtml</welcome-file>
 	</welcome-file-list>
 	
 	<error-page>
