--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle.properties
@@ -24,3 +24,6 @@ calculator.porDia=Por d\u00EDa
 calculator.porSemana=Por semana
 calculator.porMes=Por mes
 calculator.copyright=\u00A9 2017 Todos los derechos reservados
+
+home.goToCalculator=Ir a la calculadora
+home=Inicio
