--- a/bitcoincalculator-front/src/main/webapp/WEB-INF/web.xml
+++ b/bitcoincalculator-front/src/main/webapp/WEB-INF/web.xml
@@ -3,91 +3,101 @@
 	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee    http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 	<display-name>Buscoloteria</display-name>
-	
+
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/applicationContext.xml</param-value>
 	</context-param>
-	
+
 	<context-param>
 		<param-name>javax.faces.DATETIMECONVERTER_DEFAULT_TIMEZONE_IS_SYSTEM_TIMEZONE</param-name>
 		<param-value>true</param-value>
 	</context-param>
-	
+
 	<context-param>
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
 		<param-value>Development</param-value>
 	</context-param>
-	
+
 	<context-param>
 		<param-name>javax.faces.SKIP_COMMENTS</param-name>
 		<param-value>true</param-value>
 	</context-param>
-	
+
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
 		<param-value>bitcoincalculator</param-value>
 	</context-param>
-	
+
 	<context-param>
 		<param-name>primefaces.FONT_AWESOME</param-name>
 		<param-value>true</param-value>
 	</context-param>
-	
+
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-	
+
 	<listener>
 		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
 	</listener>
-	
+
 	<listener>
 		<listener-class>net.bounceme.chronos.bitcoincalculator.listeners.InitListener</listener-class>
 	</listener>
-	
+
 	<servlet>
 		<servlet-name>facesServlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
 		<load-on-startup>2</load-on-startup>
 	</servlet>
-	
+
 	<servlet-mapping>
 		<servlet-name>facesServlet</servlet-name>
 		<url-pattern>*.jsf</url-pattern>
 	</servlet-mapping>
-	
+
 	<servlet-mapping>
 		<servlet-name>facesServlet</servlet-name>
 		<url-pattern>/faces/*</url-pattern>
 	</servlet-mapping>
+
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
 	
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 	<welcome-file-list>
 		<welcome-file>faces/pages/index.xhtml</welcome-file>
 	</welcome-file-list>
-	
+
 	<error-page>
 		<exception-type>java.lang.Exception</exception-type>
 		<location>/faces/error.xhtml</location>
 	</error-page>
-	
+
 	<error-page>
 		<exception-type>java.lang.Exception</exception-type>
 		<location>/faces/error.xhtml</location>
 	</error-page>
-	
+
 	<error-page>
 		<error-code>404</error-code>
 		<location>/faces/404.xhtml</location>
 	</error-page>
-	
+
 	<resource-ref>
 		<description>Bitcoin Datasource</description>
 		<res-ref-name>jdbc/bitcoinCalculatorDS</res-ref-name>
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
 	</resource-ref>
-	
+
 	<mime-mapping>
 		<extension>ttf</extension>
 		<mime-type>application/x-font-ttf</mime-type>
@@ -104,4 +114,32 @@
 		<extension>eot</extension>
 		<mime-type>application/x-font-eot</mime-type>
 	</mime-mapping>
+
+	<security-constraint>
+        <web-resource-collection>
+            <web-resource-name>All users</web-resource-name>
+            <url-pattern>/favicon.ico</url-pattern>
+        </web-resource-collection>
+    </security-constraint>
+
+    <!-- <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>AuthUser</web-resource-name>
+            <url-pattern>/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>AUTH_USER</role-name>
+        </auth-constraint>
+        <user-data-constraint>
+            <transport-guarantee>CONFIDENTIAL</transport-guarantee>
+        </user-data-constraint>
+    </security-constraint>
+	
+	<login-config>
+		<auth-method>CLIENT-CERT</auth-method>
+	</login-config>
+	
+	<security-role>
+        <role-name>AUTH_USER</role-name>
+    </security-role> -->
 </web-app>
