--- a/bitcoincalculator-front/pom.xml
+++ b/bitcoincalculator-front/pom.xml
@@ -14,6 +14,10 @@
 	<packaging>war</packaging>
 	<name>Calculadora de bitcoins en tiempo real</name>
 	<url>http://bitcoincalculator.buscoloteria.com</url>
+	
+	<properties>
+		<jsf.version>2.2.6</jsf.version>
+	</properties>
 
 	<dependencies>
 
@@ -70,6 +74,21 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>4.2.0.RELEASE</version>
 		</dependency>
+		
+		<!-- Oficial Oracle JSF -->
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-api</artifactId>
+			<version>${jsf.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-impl</artifactId>
+			<version>${jsf.version}</version>
+			<scope>provided</scope>
+		</dependency> 
 	</dependencies>
 
 	<build>
