--- a/bitcoincalculator-theme/pom.xml
+++ b/bitcoincalculator-theme/pom.xml
@@ -5,13 +5,14 @@
 	<parent>
 		<groupId>net.bounceme.chronos</groupId>
 		<artifactId>bitcoincalculator</artifactId>
-		<version>${my.version}</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<groupId>net.bounceme.chronos.bitcoincalculator</groupId>
 	<artifactId>bitcoincalculator-theme</artifactId>
 	<packaging>jar</packaging>
 	<url>http://maven.apache.org</url>
+	<version>1.0.0</version>
 	
 	<build>
 		<resources>
