--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>net.bounceme.chronos</groupId>
     <artifactId>bitcoincalculator</artifactId>
-    <version>${my.version}</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
 
     <name>BitcoinCalculator</name>
@@ -12,7 +12,6 @@
 
     <properties>
     	<jdk.version>1.8</jdk.version>
-    	<my.version>1.3-SNAPSHOT</my.version>
 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	<project.build.locale>es_ES</project.build.locale>
 	<chronoslibs.version>1.0.Final</chronoslibs.version>
