Logs for JBoss EAP. Versions

--- a/pom.xml
+++ b/pom.xml
@@ -1,122 +1,123 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.bounceme.chronos</groupId>
-    <artifactId>bitcoincalculator</artifactId>
-    <version>1.0.0</version>
-    <packaging>pom</packaging>
+	<groupId>net.bounceme.chronos</groupId>
+	<artifactId>bitcoincalculator</artifactId>
+	<version>1.0.0</version>
+	<packaging>pom</packaging>
 
-    <name>BitcoinCalculator</name>
-    <url>http://bitcoincalculator.salasierra12.es</url>
+	<name>BitcoinCalculator</name>
+	<url>http://bitcoincalculator.salasierra12.es</url>
 
-    <properties>
-    	<jdk.version>1.8</jdk.version>
-	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	<project.build.locale>es_ES</project.build.locale>
-	<chronoslibs.version>1.0.Final</chronoslibs.version>
-	<activemq.version>5.10.0</activemq.version>
-	<jsoup.version>1.8.3</jsoup.version>
-	<xml-apis.version>1.4.01</xml-apis.version>
-	<jackson.version>2.4.3</jackson.version>
-	<quartz.version>2.2.1</quartz.version>
-	<primefaces.version>6.0</primefaces.version>
-    </properties>
+	<properties>
+		<jdk.version>1.8</jdk.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.build.locale>es_ES</project.build.locale>
+		<chronoslibs.version>1.0.1-SNAPSHOT</chronoslibs.version>
+		<activemq.version>5.10.0</activemq.version>
+		<jsoup.version>1.8.3</jsoup.version>
+		<xml-apis.version>1.4.01</xml-apis.version>
+		<jackson.version>2.4.3</jackson.version>
+		<quartz.version>2.2.1</quartz.version>
+		<primefaces.version>6.0</primefaces.version>
+	</properties>
 
-    <modules>
-	<module>bitcoincalculator-front</module>
-	<module>bitcoincalculator-core</module>
-	<module>bitcoincalculator-data</module>
-	<module>bitcoincalculator-theme</module>
-    </modules>
-    
-    <build>
-    	<plugins>
-    		<plugin>
-			  	<groupId>org.apache.maven.plugins</groupId>
-			  	<artifactId>maven-compiler-plugin</artifactId>
-			  	<configuration>
+	<modules>
+		<module>bitcoincalculator-front</module>
+		<module>bitcoincalculator-core</module>
+		<module>bitcoincalculator-data</module>
+		<module>bitcoincalculator-theme</module>
+	</modules>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
 				</configuration>
 			</plugin>
-      		<plugin>
-        		<artifactId>maven-site-plugin</artifactId>
-        		<configuration>
-		        	<outputDirectory>${project.reporting.outputDirectory}</outputDirectory>
-		          	<inputEncoding>${project.build.sourceEncoding}</inputEncoding>
-        		</configuration>
-      		</plugin>
-      		<plugin>
-        		<artifactId>maven-resources-plugin</artifactId>
-        		<configuration>
-          			<encoding>${project.build.sourceEncoding}</encoding>
-        		</configuration>
-      		</plugin>
-      		<plugin>
-        		<groupId>org.codehaus.mojo</groupId>
-        		<artifactId>javancss-maven-plugin</artifactId>
-        		<version>2.0-beta-2</version>
-      		</plugin>
-      		<plugin>
-        		<artifactId>maven-pmd-plugin</artifactId>
-        		<configuration>
-          			<linkXref>true</linkXref>
-          			<sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
-          			<targetEncoding>${project.build.sourceEncoding}</targetEncoding>
-          			<minimumTokens>100</minimumTokens>
-          			<targetJdk>${jdk.version}</targetJdk>
-        		</configuration>
-      		</plugin>
-    	</plugins>
+			<plugin>
+				<artifactId>maven-site-plugin</artifactId>
+				<configuration>
+					<outputDirectory>${project.reporting.outputDirectory}</outputDirectory>
+					<inputEncoding>${project.build.sourceEncoding}</inputEncoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<configuration>
+					<encoding>${project.build.sourceEncoding}</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>javancss-maven-plugin</artifactId>
+				<version>2.0-beta-2</version>
+			</plugin>
+			<plugin>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<configuration>
+					<linkXref>true</linkXref>
+					<sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
+					<targetEncoding>${project.build.sourceEncoding}</targetEncoding>
+					<minimumTokens>100</minimumTokens>
+					<targetJdk>${jdk.version}</targetJdk>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
-	
-	<reporting>
-    	<plugins>
-      		<plugin>
-	    		<groupId>org.apache.maven.plugins</groupId>
-	    		<artifactId>maven-jxr-plugin</artifactId>
-	    		<version>2.1</version>
-      		</plugin>
-	      	<plugin>
-			<artifactId>maven-javadoc-plugin</artifactId>
-		        <configuration>
-			     	<source>${jdk.version}</source>
-			     	<target>${jdk.version}</target>
-			      	<docencoding>${project.build.sourceEncoding}</docencoding>
-			      	<encoding>${project.build.sourceEncoding}</encoding>
-			     	<charset>${project.build.sourceEncoding}</charset>
-			    	<locale>${project.build.locale}</locale>
-			   		<report>true</report>
-			    	<links>
-			       		<link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
-			      	</links>
-		        </configuration>
-	      	</plugin>
-      		<plugin>
-	        	<artifactId>maven-pmd-plugin</artifactId>
-	        	<configuration>
-		          	<linkXref>true</linkXref>
-		          	<sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
-		          	<targetEncoding>${project.build.sourceEncoding}</targetEncoding>
-		          	<minimumTokens>100</minimumTokens>
-		          	<targetJdk>${jdk.version}</targetJdk>
-	        	</configuration>
-      		</plugin>
-      		<plugin>
-	        	<artifactId>maven-checkstyle-plugin</artifactId>
-	        	<configuration>
-	          		<configLocation>${basedir}/src/main/resources/maven_checks.xml</configLocation>
-	        	</configuration>
-      		</plugin>
-      		<plugin>
-        		<artifactId>maven-surefire-report-plugin</artifactId>
-      		</plugin>
-    	</plugins>
-  	</reporting>
 
-    <dependencies>
-		
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+				<version>2.1</version>
+			</plugin>
+			<plugin>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<source>${jdk.version}</source>
+					<target>${jdk.version}</target>
+					<docencoding>${project.build.sourceEncoding}</docencoding>
+					<encoding>${project.build.sourceEncoding}</encoding>
+					<charset>${project.build.sourceEncoding}</charset>
+					<locale>${project.build.locale}</locale>
+					<report>true</report>
+					<links>
+						<link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
+					</links>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<configuration>
+					<linkXref>true</linkXref>
+					<sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
+					<targetEncoding>${project.build.sourceEncoding}</targetEncoding>
+					<minimumTokens>100</minimumTokens>
+					<targetJdk>${jdk.version}</targetJdk>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<configuration>
+					<configLocation>${basedir}/src/main/resources/maven_checks.xml</configLocation>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</reporting>
+
+	<dependencies>
+
 		<dependency>
 			<groupId>net.bounceme.chronos.chronoslibs</groupId>
 			<artifactId>chronos-utils</artifactId>
@@ -124,34 +125,41 @@
 		</dependency>
 
 		<dependency>
-		    <groupId>org.apache.commons</groupId>
-		    <artifactId>commons-lang3</artifactId>
-		    <version>3.1</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
 		</dependency>
-    </dependencies>
-    
-    <profiles>
-        
-    	<profile>
-    		<id>DEVELOP</id>
-    		<activation>
-    			<activeByDefault>true</activeByDefault>
-    		</activation>
-    		
-    		<properties>
-    			<debug.mode>true</debug.mode>
-    			<logs.root.level>DEBUG</logs.root.level>
-    			<logs.file>logs/bitcoin-calculator.log</logs.file>
-    		</properties>
-    	</profile>
-    	<profile>
-    		<id>PRO</id>
-    		
-    		<properties>
-    			<debug.mode>false</debug.mode>
-    			<logs.root.level>ERROR</logs.root.level>
-    			<logs.file>/var/log/tomcat/bitcoin-calculator.log</logs.file>
-    		</properties>
-    	</profile>
-    </profiles>
+
+		<dependency>
+			<groupId>org.jboss.logging</groupId>
+			<artifactId>jboss-logging</artifactId>
+			<version>3.3.1.Final-redhat-1</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
+
+	<profiles>
+
+		<profile>
+			<id>DEVELOP</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+
+			<properties>
+				<debug.mode>true</debug.mode>
+				<logs.root.level>DEBUG</logs.root.level>
+				<logs.file>logs/bitcoin-calculator.log</logs.file>
+			</properties>
+		</profile>
+		<profile>
+			<id>PRO</id>
+
+			<properties>
+				<debug.mode>false</debug.mode>
+				<logs.root.level>ERROR</logs.root.level>
+				<logs.file>/var/log/tomcat/bitcoin-calculator.log</logs.file>
+			</properties>
+		</profile>
+	</profiles>
 </project>
