--- a/bitcoincalculator-front/pom.xml
+++ b/bitcoincalculator-front/pom.xml
@@ -20,10 +20,32 @@
 	</properties>
 
 	<dependencies>
+	
+		<!-- Oficial Oracle JSF -->
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-api</artifactId>
+			<version>${jsf.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-impl</artifactId>
+			<version>${jsf.version}</version>
+			<scope>provided</scope>
+		</dependency> 
+		
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>net.bounceme.chronos.chronoslibs</groupId>
-			<artifactId>chronos-web-utils</artifactId>
+			<artifactId>chronos-web-jsf</artifactId>
 			<version>${chronoslibs.version}</version>
 		</dependency>
 
@@ -57,27 +79,7 @@
 			<version>1.0.10</version>
 		</dependency>
 
-		<dependency>
-			<groupId>jstl</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
-			<scope>provided</scope>
-		</dependency>
-
-		<!-- Oficial Oracle JSF -->
-		<dependency>
-			<groupId>com.sun.faces</groupId>
-			<artifactId>jsf-api</artifactId>
-			<version>${jsf.version}</version>
-			<scope>provided</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>com.sun.faces</groupId>
-			<artifactId>jsf-impl</artifactId>
-			<version>${jsf.version}</version>
-			<scope>provided</scope>
-		</dependency>
+		 
 	</dependencies>
 
 	<build>
@@ -226,21 +228,6 @@
 			</properties>
 		</profile>
 
-		<profile>
-			<id>TEST</id>
-
-			<properties>
-				<stage>TEST</stage>
-			</properties>
-		</profile>
-
-		<profile>
-			<id>PRO</id>
-
-			<properties>
-				<stage>PRO</stage>
-			</properties>
-		</profile>
 	</profiles>
 
 </project>
