--- a/bitcoincalculator-data/pom.xml
+++ b/bitcoincalculator-data/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>net.bounceme.chronos</groupId>
 		<artifactId>bitcoincalculator</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 
 	<groupId>net.bounceme.chronos.bitcoincalculator</groupId>
