--- a/bitcoincalculator-front/pom.xml
+++ b/bitcoincalculator-front/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>net.bounceme.chronos</groupId>
 		<artifactId>bitcoincalculator</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -52,19 +52,19 @@
 		<dependency>
 			<groupId>net.bounceme.chronos.bitcoincalculator</groupId>
 			<artifactId>bitcoincalculator-core</artifactId>
-			<version>1.0.0</version>
+			<version>${my.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>net.bounceme.chronos.bitcoincalculator</groupId>
 			<artifactId>bitcoincalculator-data</artifactId>
-			<version>1.0.0</version>
+			<version>${my.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>net.bounceme.chronos.bitcoincalculator</groupId>
 			<artifactId>bitcoincalculator-theme</artifactId>
-			<version>1.0.0</version>
+			<version>${my.version}</version>
 		</dependency>
 
 		<dependency>
