Fixed view bugs and resources

--- a/bitcoincalculator-front/pom.xml
+++ b/bitcoincalculator-front/pom.xml
@@ -6,6 +6,7 @@
 		<groupId>net.bounceme.chronos</groupId>
 		<artifactId>bitcoincalculator</artifactId>
 		<version>1.0.1-SNAPSHOT</version>
+		<relativePath>..</relativePath>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
