--- a/bitcoincalculator-front/src/main/webapp/WEB-INF/web.xml
+++ b/bitcoincalculator-front/src/main/webapp/WEB-INF/web.xml
@@ -44,12 +44,7 @@
 
 	<error-page>
 		<exception-type>java.lang.Exception</exception-type>
-		<location>/error.jsf</location>
-	</error-page>
-
-	<error-page>
-		<error-code>404</error-code>
-		<location>/404.jsf</location>
+		<location>/pages/error.jsf</location>
 	</error-page>
 
 	<mime-mapping>
