--- a/bitcoincalculator-core/src/main/resources/application.properties
+++ b/bitcoincalculator-core/src/main/resources/application.properties
@@ -7,3 +7,6 @@ BitcoinCalculator.exchangeCurrency=http\://data.fixer.io/api/latest
 BitcoinCalculator.accessKey=83c697dc432b65773d1d83c98ea09e77
 
 infinispan.server=localhost
+
+google.app.name=chronos-libs
+google.api.key=
