--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle.properties
@@ -16,14 +16,14 @@ calculator.pie.texto1=Calculations provided by
 calculator.noTraders=No foreign exchange markets have been registered
 calculator.currentTrader=Current market
 calculator.selectTrader=Select market
-calculator.resultados=Resultados
-calculator.time=Tiempo
+calculator.resultados=Results
+calculator.time=Time
 calculator.coin=BitCoins
-calculator.dollar=D\u00F3lares
-calculator.porDia=Por d\u00EDa
-calculator.porSemana=Por semana
-calculator.porMes=Por mes
-calculator.copyright=\u00A9 2017 Todos los derechos reservados
+calculator.dollar=Dollars
+calculator.porDia=Per day
+calculator.porSemana=Per week
+calculator.porMes=Per month
+calculator.copyright=\u00A9 2017 All rights reserved
 
-home.goToCalculator=Ir a la calculadora
-home=Inicio
+home.goToCalculator=I want to try\!
+home=Home
