--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/PubliBundle.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/PubliBundle.properties
@@ -18,3 +18,6 @@ index.feature.content.3=Statistical calculations that will make you decide which
 index.feature.title.4=Ranking of users
 index.feature.icon.4=001-user.png
 index.feature.content.4=Our users can enter their performance data, which will help us improve statistics. Currently in preparation
+error.title=An error has occurred
+error.parrafo.1=To our chagrin, an internal error has occurred in this program. Please contact technical support.
+error.parrafo.2=If instructed by our support staff, please copy and paste the following report into an email message.
