--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<jackson.version>2.4.3</jackson.version>
 		<quartz.version>2.2.1</quartz.version>
 		<primefaces.version>6.0</primefaces.version>
+		<prettyfaces.version>3.4.1.Final</prettyfaces.version>
 	</properties>
 
 	<modules>
