--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle.properties
@@ -13,6 +13,8 @@ calculator.exchangeRateSource=Exchange rate source
 calculator.bcPerBlock=Bitcoins per block
 calculator.siguienteDificultad=Next difficulty
 calculator.pie.texto1=Calculations provided by
+calculator.pie.links=Helpful Links
+calculator.pie.contact=Contact
 calculator.noTraders=No foreign exchange markets have been registered
 calculator.currentTrader=Current market
 calculator.selectTrader=Select market
