--- a/bitcoincalculator-front/src/main/webapp/WEB-INF/web.xml
+++ b/bitcoincalculator-front/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,36 @@
 		<param-name>primefaces.FONT_AWESOME</param-name>
 		<param-value>true</param-value>
 	</context-param>
+	
+	<context-param>
+    		<param-name>primefaces.UPLOADER</param-name>
+    		<param-value>commons</param-value>
+	</context-param>
+	
+	<context-param>
+		<param-name>primefaces.MOVE_SCRIPTS_TO_BOTTOM</param-name>
+		<param-value>true</param-value>
+	</context-param>
+	
+	<context-param>
+        	<param-name>primefaces.SUBMIT</param-name>
+        	<param-value>partial</param-value>
+    	</context-param>
+    
+	<context-param>
+        	<param-name>primefaces.TRANSFORM_METADATA</param-name>
+        	<param-value>true</param-value>
+    	</context-param>
+    
+	<context-param>
+        	<param-name>javax.faces.INTERPRET_EMPTY_STRING_SUBMITTED_VALUES_AS_NULL</param-name>
+        	<param-value>true</param-value>
+    	</context-param>
+	
+	<context-param>
+        	<param-name>primefaces.LEGACY_WIDGET_NAMESPACE</param-name>
+        	<param-value>true</param-value>
+    	</context-param>
 
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
